@@ -1,3 +1,10 @@
+Wed Mar 20 09:37:11 GMT 2002  Eirik Fuller <eirik@hackrat.com>
+
+	* src/check_mandirs.c (splitline): Don't create a copy of base_name
+	  as pointer_name.
+	  (test_manfile): Be more careful about pointer reuse across calls
+	  to splitline().
+
 Mon Feb 11 13:01:07 GMT 2002  Michael Piefel  <piefel@debian.org>
 
 	* po/de.po: Corrections and updates; convert to UTF-8.
